--- a/Example/ViewAnimator/Base.lproj/Main.storyboard
+++ b/Example/ViewAnimator/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="bTT-jA-UgM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="bTT-jA-UgM">
     <device id="retina5_9" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Navigation items with more than one left or right bar item" minToolsVersion="7.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -193,6 +193,9 @@
                     <connections>
                         <outlet property="collectionView" destination="62B-9S-MCt" id="QeH-N5-j4O"/>
                         <outlet property="tableView" destination="dvM-fY-6Tr" id="ttI-JA-eet"/>
+                        <outletCollection property="titles" destination="hW6-Of-57y" collectionClass="NSMutableArray" id="AFH-Os-prP"/>
+                        <outletCollection property="titles" destination="qoX-Tp-oK7" collectionClass="NSMutableArray" id="cWs-yF-hSm"/>
+                        <outletCollection property="titles" destination="YIm-4U-abp" collectionClass="NSMutableArray" id="s9c-Y0-Ide"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
